--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,17 +2,17 @@
 {% load blog_extras %}
 {% block content %}
     <h2>Blog Posts</h2>
-    {% for post in posts %}
-    <div class="row">
-        <div class="col">
+    {% for post in post_list %}
+    {% row "border-bottom" %}
+        {% col %}
             <h3>{{ post.title }}</h3>
-            <small>By {{ post.author|author_details:user }} on {{ post.published_at|date:"M, d Y" }}</small>
+            {% include "blog/post_byline.html" %}
             <p>{{ post.summary }}</p>
             <p>
                 ({{ post.content|wordcount }} words)
-                <a href="#">Read More</a>
+                <a href={% url "blog_post_detail" post.slug %}>Read More</a>
             </p>
-        </div>
-    </div>
+        {% endcol %}
+    {% endrow %}
     {% endfor %}
 {% endblock %}
