--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,6 +12,7 @@
         {{ post.content|safe }}
     {% endcol %}
 {% endrow %}
+{% include "blog/post_comments.html" %}
 {% row %}
     {% col %}
         {% recent_posts post %}
